graal vm specific startup file